<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.GameGallery"
        android:background="@color/blue2"
        android:orientation="vertical"
        android:id="@+id/coordinatorLayout">

    <fragment
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="comp3350.grs.presentation.TopBar"
            tools:layout="@layout/fragment_top_bar"
            android:id="@+id/game_gallery_top_bar"
            ></fragment>

    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/game_gallery_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <androidx.appcompat.widget.SearchView
                android:id="@+id/search_game_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_rectangle"
                android:layout_marginTop="5dp"
                app:queryHint="search game by name"
                ></androidx.appcompat.widget.SearchView>

        <LinearLayout
                android:id="@+id/sort_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/name_sort"
                    android:paddingLeft="5dp"
                    android:paddingVertical="5dp"
                    >
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/sort"

                        ></ImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Name"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        ></TextView>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/price_sort"
                    android:paddingVertical="5dp"
                    >
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/sort"

                        ></ImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Price"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        ></TextView>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/rating_sort"
                    android:paddingVertical="5dp"
                    >
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/sort"

                        ></ImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Rating"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        ></TextView>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:id="@+id/review_sort"
                    android:paddingVertical="5dp"
                    >
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/sort"

                        ></ImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="#Review"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        ></TextView>

            </LinearLayout>


        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/game_gallery_scroll"
                >
            <TableLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/table_layout">


            </TableLayout>
        </ScrollView>

    </LinearLayout>
    <ImageView
            android:id="@+id/request_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/plus"
            android:background="@drawable/circle"
            android:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
        ></ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>
