<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="sort_icon" />
    <item type="id" name="search_icon" />
    <item type="id" name="write_review_edittext" />
</resources>