...
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/blue"
                android:text="Enter Game Gallery"
                android:textSize="60dp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:id="@+id/gallery_or_forum_gallery"
                ></TextView>
        <TextView
...
